# trusty-phonebook

./: .gitignore  app.js  docker-compose.yml  index.js  my_request_logger.js  package-lock.json  package.json  phonebook.json
exercise-3/: index.js  package.json
exercise-3/requests/: reqs.rest
hyper_serve/: Cargo.toml  README.md
hyper_serve/src/: main.rs
notes-express/: app.js  data.json  index.js  my_request_logger.js  package-lock.json  package.json
phonebook-express/: index.js  package-lock.json  package.json  phonebook.js
phonebook-front/: .env.development  Dockerfile  package-lock.json  package.json
phonebook-front/src/: App.js  index.css
rusty/: README.md
rusty-actix/: Cargo.toml  Dockerfile  Dockerfile1  build.rs  mock.json  note.txt
rusty-actix/files/: mock copy.json  mock.json  mock_empty.json  mock_out.json  mock_out_empty.json
rusty-actix/react-front/: asset-manifest.json  index.html  precache-manifest.70429bbe96a34ea56e1cb1a6570602b0.js  service-worker.js
rusty-actix/react-front/static/css/: main.09af38e2.chunk.css  main.09af38e2.chunk.css.map
rusty-actix/react-front/static/js/: 1.e6893027.chunk.js  1.e6893027.chunk.js.map  main.dc35c614.chunk.js  main.dc35c614.chunk.js.map
rusty-actix/src/: __ily  into_actix_trait.rs  lib.rs  macros.rs  main.rs
rusty-hyper/src/: main.rs
