[package]
description = "express app rusty clone"
edition = "2021"
name = "app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14.18", features = ["full"]}
tokio = {version = "1.18.2", features = ["rt-multi-thread", "macros"]}
