[package]
name = "rusty-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web = "4.0.1"
anyhow = "1.0.57"
env_logger = "0.9.0"
fs2 = "0.4.3"
log = "0.4.17"
# We can dive into color-eyre some other time
# color-eyre = "0.6.1"
memmap2 = "0.5.3"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
