[package]
name = "actixbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "phonebook"
path = "src/lib.rs"
test = true
edition = "2021"
crate-type = ["lib"]

[dependencies]
actix-cors = "0.6.1"
actix-files = "0.6.0"
actix-web = "4.0.1"
actix-web-static-files = "4.0.0"
anyhow = "1.0.57"
env_logger = "0.9.0"
fs2 = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.17"
# We can dive into color-eyre some other time
# color-eyre = "0.6.1"
memmap2 = "0.5.3"
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["rt-multi-thread","macros"] }
static-files = "0.2.1"
actix-web-lab = "0.16.1"

[build-dependencies]
static-files = "0.2.1"
